--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://postgres:BONG22lm@123@db.ocxsoszznbmfunwdjkpc.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.ocxsoszznbmfunwdjkpc:BONG22lm@123@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres
 PAYLOAD_SECRET=710d501a0210af4258bfa413
 # Added by Payload
